...
        case fields(Fields)
        case label
        case nextButton(String)
        case updateEmailButtons
        case processing(Processing)
...
                     isPrimaryButtonHidden: true,
                     nonPrimaryButtonTitle: L.close,
                     nonPrimaryButtonAccessibilityIdentifier: "closeButton",
                     delegate: delegate)
      return view
...
                     isPrimaryButtonHidden: true,
                     nonPrimaryButtonTitle: L.done,
                     nonPrimaryButtonAccessibilityIdentifier: "doneButton",
                     delegate: delegate)
      return view
...
                                                           fields: [.init(placeholder: L.selectCountry,
                                                                          text: model.countryOfResidence?.name,
                                                                          accessibilityIdentifier: "countryOfResidenceTextField")],
                                                           inputMode: .picker(items: countries,
                                                                              selectedIndex: selectedIndex))
...
                                                 fields: [.init(placeholder: L.firstName,
                                                                text: model.fullName.first,
                                                                accessibilityIdentifier: "firstNameTextField"),
                                                          .init(placeholder: L.middleName,
                                                                text: model.fullName.middle,
                                                                accessibilityIdentifier: "middleNameTextField"),
                                                          .init(placeholder: L.lastName,
                                                                text: model.fullName.last,
                                                                accessibilityIdentifier: "lastNameTextField")])
    
    let dateOfBirthField = Section.Item.Mode.Fields(type: .dateOfBirth,
                                                    fields: [.init(placeholder: L.selectDateOfBirth,
                                                                   text: model.dateOfBirthString,
                                                                   accessibilityIdentifier: "dateOfBirthTextField")],
                                                    inputMode: .datePicker(selectedDate: model.dateOfBirth))
    
...
                                              fields: [.init(placeholder: ssnFieldMask,
                                                             text: model.tax.ssn,
                                                             accessibilityIdentifier: "ssnTextField")],
                                              mask: ssnFieldMask)
      items.append(Section.Item(mode: .fields(ssnField),
...
                                                  fields: [.init(placeholder: L.yourFullName,
                                                                 text: model.tax.signature,
                                                                 accessibilityIdentifier: "signatureTextField")])
    let signatureMessage = signatureMessage(title: L.signatureDescription,
                                            subTitle: L.taxPurposesMessage,
...
                                                fields: [.init(placeholder:L.streetAddress,
                                                               text: model.address.street,
                                                               accessibilityIdentifier: "streetTextField"),
                                                         .init(placeholder:L.apartment,
                                                               text: model.address.apartment,
                                                               accessibilityIdentifier: "apartmentTextField")])
    
    let cityField = Section.Item.Mode.Fields(type: .city,
                                             fields: [.init(text: model.address.city,
                                                            accessibilityIdentifier: "cityTextField")])
    
    let regionField: Section.Item.Mode.Fields
    let regionFieldAccessibilityIdentifier = "stateTextField"
    let hasStates: Bool
    if let states = model.countryOfResidence?.states {
...
    let postalCodeField = Section.Item.Mode.Fields(type: .postalCode,
                                                   fields: [.init(text: model.address.postalCode,
                                                                  accessibilityIdentifier: "postalCodeTextField")])
    
    var items: [Section.Item] = [
...
                                                            fields: [.init(placeholder: L.selectAnswer,
                                                                           text: model.address.canUseAddressForTax?.description,
                                                                           accessibilityIdentifier: "useAddressForTaxTextField")],
                                                            inputMode: .picker(items: pickerItems,
                                                                               selectedIndex: canUseAddressForTaxSelectedIndex))
...
