...
        enum FieldType {
          case document
          case documentCountry
          
          var accessibilityIdentifier: String {
            switch self {
            case .document: return "documentTextField"
            case .documentCountry: return "documentCountryTextField"
            }
          }
        }
        
        struct Field {
...
        enum PhotoType {
          case frontSide
          case backSide
          
          var accessibilityIdentifier: String {
            switch self {
            case .frontSide: return "frontSideChooseButton"
            case .backSide: return "backSideChooseButton"
            }
          }
        }
        
        struct Photo {
          let type: PhotoType
...
