...
                                                  "Use Mocks (only for UI Tests)",
                                                  "Set colors"]),
    Section(name: "Testable section", items: ["getTosRequiredForUser",
                                              "getUserBalanceByCurrency",
                                              "TOS flow",
                                              "Checkout flow",
                                              "KYC flow",
                                              "Transaction Details flow",
                                              "Transaction History flow",
                                              "Payment Selection flow"])
  ]
  
  override func numberOfSections(in tableView: UITableView) -> Int {
...
      let uiSwitch = UISwitch()
      if row == 0 {
        uiSwitch.isOn = true
        uiSwitch.accessibilityIdentifier = nil
      } else {
        uiSwitch.isOn = false
        uiSwitch.accessibilityIdentifier = "useMocksSwitch"
      }
      uiSwitch.addTarget(self, action: #selector(switchChanged(_:)), for: .valueChanged)
      cell.accessoryView = uiSwitch
    } else {
      cell.accessoryView = nil
    }
...
